<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="androidx.lifecycle.LiveData" />

        <import type="com.example.openmovie.presentation.movies.adapter.MovieAdapter" />

        <variable
            name="banner"
            type="LiveData&lt;String>" />

        <variable
            name="mostPopularHeader"
            type="String" />

        <variable
            name="topRatedHeader"
            type="String" />

        <variable
            name="recommendedHeader"
            type="String" />

        <variable
            name="mostPopularAdapter"
            type="com.example.openmovie.presentation.movies.adapter.MovieAdapter" />

        <variable
            name="topRatedMoviesAdapter"
            type="com.example.openmovie.presentation.movies.adapter.MovieAdapter" />

        <variable
            name="recommendedMoviesAdapter"
            type="com.example.openmovie.presentation.movies.adapter.MovieAdapter" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.movies.MoviesFragment">

            <com.example.openmovie.utils.AspectRatioImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/app_name"
                android:scaleType="center"
                app:imageUrl="@{banner}"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:ratio="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@drawable/gradiant_main_movie_image"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/imageView"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <Button
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#7D8790"
                    android:text="@string/whishlist" />

                <Space
                    android:layout_width="4dp"
                    android:layout_height="wrap_content" />

                <Button
                    style="@style/Widget.Material3.Button.Icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#F2C94C"
                    android:text="@string/details" />

            </LinearLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.25" />

            <include
                android:id="@+id/mostPopularMovies"
                layout="@layout/list_section"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:header="@{mostPopularHeader}"
                app:adapter="@{mostPopularAdapter}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline" />

            <include
                android:id="@+id/topRatedMovies"
                layout="@layout/list_section"
                app:header="@{topRatedHeader}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:adapter="@{topRatedMoviesAdapter}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/mostPopularMovies" />

            <include
                android:id="@+id/recommendedMovies"
                layout="@layout/list_section"
                app:header="@{recommendedHeader}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                app:adapter="@{recommendedMoviesAdapter}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/topRatedMovies" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</layout>
